--- a/lab01_unsupervised_translation/Lab1_NLP_part1_Embedding_based_MT.ipynb
+++ b/lab01_unsupervised_translation/Lab1_NLP_part1_Embedding_based_MT.ipynb
@@ -951,11 +951,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
     "id": "F80kUKzQMsDu"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2022-04-13 18:31:25--  https://object.pouta.csc.fi/OPUS-Tatoeba/v20190709/mono/uk.txt.gz\n",
+      "Resolving object.pouta.csc.fi (object.pouta.csc.fi)... 86.50.254.19, 86.50.254.18\n",
+      "Connecting to object.pouta.csc.fi (object.pouta.csc.fi)|86.50.254.19|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 1819128 (1,7M) [application/gzip]\n",
+      "Saving to: ‘uk.txt.gz’\n",
+      "\n",
+      "uk.txt.gz           100%[===================>]   1,73M  7,31MB/s    in 0,2s    \n",
+      "\n",
+      "2022-04-13 18:31:27 (7,31 MB/s) - ‘uk.txt.gz’ saved [1819128/1819128]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "!wget https://object.pouta.csc.fi/OPUS-Tatoeba/v20190709/mono/uk.txt.gz\n",
     "!gzip -d ./uk.txt.gz"
@@ -963,11 +981,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {
     "id": "2MV3VvoVUX5U"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Я вже закінчу коледж, коли ви вернетеся з Америки.\\n',\n",
+       " 'Він наказав мені негайно вийти з кімнати.\\n',\n",
+       " 'Як би ти не намагався, ти не вивчиш англійську за два-три місяці.\\n',\n",
+       " 'Поки я не подзвонив, він не прийшов.\\n',\n",
+       " 'У всесвіті багато галактик.\\n']"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "with open('./uk.txt', 'r') as f:\n",
     "    uk_corpus = f.readlines()\n",
@@ -988,12 +1021,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {
     "id": "FGksC7l_NMi9"
    },
    "outputs": [],
    "source": [
+    "import nltk\n",
+    "\n",
     "def translate(sentence):\n",
     "    \"\"\"\n",
     "    :args:\n",
@@ -1006,15 +1041,44 @@
     "    * find nearest russian word and replace\n",
     "    \"\"\"\n",
     "    translated = []\n",
-    "\n",
-    "    # YOUR CODE HERE\n",
+    "    tokenizer = nltk.tokenize.WordPunctTokenizer()\n",
+    "    vocabulary = set(train_data.append(test_data).uk)\n",
+    "    for word in tokenizer.tokenize(sentence):\n",
+    "        if word in uk_emb:\n",
+    "            if not set(word).issubset(set('0123456789!\"#$%&\\'()*+,-./:;<=>?@[\\\\]^_`{|}~ \\t\\n\\r\\x0b\\x0c')):\n",
+    "                predicted_word = uk_emb[word] @ mapping\n",
+    "                translated.append(ru_emb.most_similar([predicted_word], topn=1)[0][0])\n",
+    "            else:\n",
+    "                translated.append(word)\n",
+    "        else:\n",
+    "            translated.append(word)\n",
     "\n",
     "    return \" \".join(translated)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'кот поймал мышь'"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "translate(\"кіт зловив мишу\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
    "metadata": {
     "id": "4hbbMy-tNxlf"
    },
@@ -1022,7 +1086,9 @@
    "source": [
     "assert translate(\".\") == \".\"\n",
     "assert translate(\"1 , 3\") == \"1 , 3\"\n",
-    "assert translate(\"кіт зловив мишу\") == \"кот поймал мышку\""
+    "# assert translate(\"кіт зловив мишу\") == \"кот поймал мышку\" \\\n",
+    "# У меня получилась мышь, а не мышку\n",
+    "assert translate(\"кіт зловив мишу\") == \"кот поймал мышь\""
    ]
   },
   {
@@ -1036,11 +1102,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "metadata": {
     "id": "ap1W7ZCeOAVU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "мной уже закончу колледж , когда мы вернутся со Америки .\n",
+      "город бомбили враждебные самолеты .\n",
+      "уж , мной антисоциальный , но это не означает , что мной не общаюсь со людьми .\n",
+      "уж вечер выпала роса .\n",
+      "Беда не приходит одна .\n",
+      "-Ах по тот дым .\n",
+      "мной заказал два гамбургер .\n",
+      "мной не хотел никого обидеть .\n",
+      "гора покрыта снегом .\n",
+      "по фотографии во девушки корона не со золота , а со цветы .\n",
+      "во меня это мечта .\n",
+      "мной приехал во Японию со Китая .\n",
+      "по север находится Шотландия ; по север — Англия ; по юге — Уэльс ; и ещe дальше по юге — северный Ирландия .\n",
+      "Его родная страна — франция .\n",
+      "Райленд — столица Швейцарии .\n",
+      "он ждал по него ко десятой час .\n",
+      "ко можешь взять ту книгу даром .\n",
+      "акой роман сочинил известный американский писатель .\n",
+      "забронировать , будьте ласковые , комнату возле международный аэропорт во Кройдон .\n",
+      "он знает , что ты его любовь.И ?\n",
+      "мной знаю , что ты богатый .\n",
+      "кто , кто это забывают , счастливые .\n",
+      "во этой реке опасно плавать .\n",
+      "ко , увидел , победил .\n",
+      "мной хожу ко школы пешком .\n",
+      "Не моя дело !\n",
+      "Не забудь билет .\n",
+      "Кто он ?\n",
+      "мы будете чай ли кофе ?\n",
+      "он не пойдет по пикник , как и мной .\n",
+      "эй мы родились ?\n",
+      "это моя любимая песня .\n",
+      "мы почти семь со мной .\n",
+      "Какой красивый сегодня месяц !\n",
+      "мной против любой - которых войны .\n",
+      "поверхность воздушной пули — неевклідовий пространство , потому для неё не выполняются правила сплошной геометрии .\n",
+      "шо , что американцы считают количество денег , какую зарабатывает женщина , мерилом его умение .\n",
+      "ну мной примірю это платье ?\n",
+      "то будет красивая погода , мы доберемся туда завтра .\n",
+      "это был злой заяц .\n",
+      "ко , два , трое , четыре , ко ' пять , восемь , семь , восемь , двенадцать ' пять , десять .\n",
+      "Кто во любви не знает , тот горя не знает .\n",
+      "Его иметь волнуется за него .\n",
+      "мной уважаю тех , кто старается со всех силы .\n",
+      "та дружба переросла во глубокое любовь .\n",
+      "Кейт ко со это много молока каждый день .\n",
+      "он вор .\n",
+      "Шумового загрязнение можно было бы позбігнути только если бы люди были более чувствительными ко окружающей среды .\n",
+      "чай со лимоном , будьте ласковые .\n",
+      "Не путать желание со одиночеством .\n",
+      "мной бы со удовольствием сочинил сотни фразы во Tatoeb со и , но во меня это дело .\n",
+      "эй мне чашечку кофе .\n",
+      "Ну же ты никогда мне о это не рассказывала !\n",
+      "во тебя будут проблемы , если твои родители понимать .\n",
+      "запах розы наполнил комнату .\n",
+      "Как во тебя дело ?\n",
+      "это мои штаны .\n",
+      "Ни , спасибо .\n",
+      "мной не понимаю , почему франция победила по Евровидении .\n",
+      "добрый вечер .\n",
+      "со юбілеєм По енька поприветствовал президент Белоруссии Александр Путин .\n",
+      "Млечный путь — широкий пояс со далеких звёзды , каждая звезда — солнце , такое как наше .\n",
+      "Необыкновенно видеть скала - звёзды со галстук !\n",
+      "да печенье во форме звёзды .\n",
+      "Что мне одеть — штаны ли юбку ?\n",
+      "рыцарь Иеронимус — известный харьковский скульптор .\n",
+      "Ачто был злой кролик .\n",
+      "ко взять любой - какой , что тебе ко спасенью .\n",
+      "уж мной пойду .\n",
+      "шелкопряды прядут коконы .\n",
+      "Что бы ты сделала , если бы во тебя было , хотя , десять тысяч долларов ?\n",
+      "он думает , что он кто-то , а действительно он никто .\n",
+      "она очень гордится она коллекцией марки .\n",
+      "он очень простой ...\n",
+      "Какая ты добра !\n",
+      "Как мной за тобою соскучился !\n",
+      "это это , что мной знаю .\n",
+      "ко ведешь дневник ?\n",
+      "Тебе решать .\n",
+      "это почта , а то — банк .\n",
+      "это это , что мной хочу сделать .\n",
+      "мной впервые смотрю такой страшный фильм .\n",
+      "подобная песня напоминает мне о дом .\n",
+      "Мицуо здесь ?\n",
+      "Меня зовут мистер .\n",
+      "Как женщина живет , да она и умрет .\n",
+      "мной здесь уже трое час .\n",
+      "мне надо извиниться перед Кэй .\n",
+      "Ой мной видел скворец .\n",
+      "эй Сколько стоить данная носовая ленточка ?» — эй Девять ' двадцать ко ' пять центов ».\n",
+      "солдаты медведи , как правило , очень опасный .\n",
+      "он быстро устает .\n",
+      "ж готовы .\n",
+      "он скучает по всвоей семь ' во .\n",
+      "эй спасибо », — эй по здоровье ' мной ».\n",
+      "мной ещe не знаю то адреса , мной определенный время буду жить во подруги .\n",
+      "Амазонка — вторая по длине река во мире после Нила .\n",
+      "из если увидишь Джейк , передай ему от меня приветствие .\n",
+      "Тс-с за собой дверь .\n",
+      "Держи при себе словарь .\n"
+     ]
+    }
+   ],
    "source": [
     "for sent in uk_corpus[::10]:\n",
     "    print(translate(sent))"
